# PRIMULA

./: .gitignore  CMakeLists.txt  COPYRIGHT  README.md  test.py
.githooks/: pre-commit
CMake/: CLI11.cmake.in  CSV.cmake.in  GitPreCommitHook.cmake.in  KiLib.cmake.in
resources/: MDSTAB_v2.m  PrSlope.m  Primula_MALONNO.m  default_run.config  default_run.toml
resources/mappe/rinforzo_radicale/: .~lock.RootReinforcement.csv#  RootReinforcement.csv
resources/mappe/sito_studio/: .~lock.Pedologia_25k_MALONNO.csv#  Pedologia_25k_MALONNO.dbf  Pedologia_25k_MALONNO.shp  Pedologia_25k_MALONNO.shx
src/: Config.cpp  Config.hpp  landslide.cpp  landslide.hpp  main.cpp  point.hpp  primula++.cpp  primula++.hpp  primula.cpp  primula.hpp  random_number_generator.hpp  raster.cpp  raster.hpp  raster_functions.cpp  raster_functions.hpp  soil.hpp  tiff.cpp  tiff.hpp
tests/malonno/: Pedologia_25k_MALONNO.csv  RootReinforcement.csv  landcover.csv
utils/: asc_2_tif.sh  test.py  tif_2_asc.sh
